fix: added overflow fix for the signin and signup      routes on mobile and fixed some components
- added overflow fix for the signup and signin routes
- fixed the GoogleSocialBtn and TwitterSocialBtn
  components to include text prop

--- a/src/index.css
+++ b/src/index.css
@@ -305,7 +305,7 @@
     font-size: 1.5rem;
     font-weight: 600;
     width: fit-content;
-    margin: 0px auto;
+    margin-right: auto;
 }
 .form-logo__icon {
     display: block;
